Convert to .net standard 1.5

--- a/src/DeepEqual.Benchmark/DeepEqual.Benchmark.csproj
+++ b/src/DeepEqual.Benchmark/DeepEqual.Benchmark.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DeepEqual.Benchmark</RootNamespace>
     <AssemblyName>DeepEqual.Benchmark</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -45,16 +46,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DeepEqual.Portable\DeepEqual.Portable.csproj">
+      <Project>{69922b0c-6161-410f-9b9a-48c349d834ba}</Project>
+      <Name>DeepEqual.Portable</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DeepEqual.Test\DeepEqual.Test.csproj">
       <Project>{941815E1-B504-4C64-B6E6-4E8C68421516}</Project>
       <Name>DeepEqual.Test</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DeepEqual\DeepEqual.csproj">
-      <Project>{5125DCF0-FAD0-412F-B06C-FF4CE289A844}</Project>
-      <Name>DeepEqual</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
