--- a/src/DeepEqual.Portable/DeepEqual.Portable.csproj
+++ b/src/DeepEqual.Portable/DeepEqual.Portable.csproj
@@ -1,17 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5125DCF0-FAD0-412F-B06C-FF4CE289A844}</ProjectGuid>
+    <ProjectGuid>{69922B0C-6161-410F-9B9A-48C349D834BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DeepEqual</RootNamespace>
-    <AssemblyName>DeepEqual</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>DeepEqual.Portable</RootNamespace>
+    <AssemblyName>DeepEqual.Portable</AssemblyName>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +25,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,23 +35,26 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
+    <None Include="project.json" />
+    <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComparisonBuilder.cs" />
     <Compile Include="ComparisonContext.cs" />
     <Compile Include="ComparisonResult.cs" />
     <Compile Include="ComplexObjectComparer.cs" />
-    <Compile Include="Extensions\ComparisonResultExtensions.cs" />
-    <Compile Include="Extensions\ComparisonContextExtensions.cs" />
     <Compile Include="ComplexObjectComparison.cs" />
     <Compile Include="CompositeComparison.cs" />
+    <Compile Include="DefaultComparison.cs" />
     <Compile Include="DictionaryComparison.cs" />
     <Compile Include="Difference.cs" />
+    <Compile Include="EnumComparison.cs" />
+    <Compile Include="Extensions\ComparisonContextExtensions.cs" />
+    <Compile Include="Extensions\ComparisonResultExtensions.cs" />
     <Compile Include="Formatting\BasicDifferenceFormatter.cs" />
     <Compile Include="Formatting\DeepEqualExceptionMessageBuilder.cs" />
     <Compile Include="Formatting\DifferenceFormatterBase.cs" />
@@ -53,23 +62,26 @@
     <Compile Include="Formatting\IDifferenceFormatter.cs" />
     <Compile Include="Formatting\MissingEntryDifferenceFormatter.cs" />
     <Compile Include="Formatting\SetDifferenceFormatter.cs" />
+    <Compile Include="IComparison.cs" />
     <Compile Include="IComparisonBuilder.cs" />
     <Compile Include="IComparisonContext.cs" />
+    <Compile Include="ListComparison.cs" />
     <Compile Include="MissingEntryDifference.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyReader.cs" />
     <Compile Include="ReflectionCache.cs" />
-    <Compile Include="DefaultComparison.cs" />
-    <Compile Include="EnumComparison.cs" />
-    <Compile Include="IComparison.cs" />
-    <Compile Include="ListComparison.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetComparison.cs" />
     <Compile Include="SetDifference.cs" />
     <Compile Include="Syntax\CompareSyntax.cs" />
     <Compile Include="Syntax\DeepEqualException.cs" />
     <Compile Include="Syntax\ObjectExtensions.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0\Microsoft.CSharp.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
