--- a/src/DeepEqual.Test/app.config
+++ b/src/DeepEqual.Test/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.10827.0" newVersion="4.0.10827.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.2929" newVersion="2.0.0.2929" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
