--- a/src/DeepEqual.Test/packages.config
+++ b/src/DeepEqual.Test/packages.config
@@ -6,7 +6,8 @@
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="SemanticComparison" version="3.0.9" targetFramework="net45" />
   <package id="Shouldly" version="1.1.1.1" targetFramework="net45" />
-  <package id="Xbehave" version="0.15.0-beta01" targetFramework="net45" />
-  <package id="xunit" version="1.9.1" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.1" targetFramework="net45" />
+  <package id="Xbehave" version="1.1.0" targetFramework="net462" />
+  <package id="xunit" version="1.9.2" targetFramework="net462" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net462" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net462" />
 </packages>
